syntax = "proto3";

message Scalar {
    oneof value {
        bytes bytes = 1;
        sint64 int = 2;
    }
}

message Value {
    oneof value {
        bytes bytes = 1;
        sint64 int = 2;
        ScalarArray set = 3;
    }
}

message ScalarArray {
    repeated Scalar scalars = 1;
}

message Request {
    oneof body {
        GetOperation get = 1;
        SetOperation set = 2;
        DeleteOperation delete = 3;
        SetAddOperation set_add = 4;
        SetRemoveOperation set_remove = 5;
        MapSetOperation map_set = 6;
        MapDeleteOperation map_delete = 7;
        GetMapRangeOperation get_map_range = 8;
        GetMapRangeByFieldOperation get_map_range_by_field = 9;
    }
}

message GetOperation {
    bytes key = 1;
}

message DeleteOperation {
    bytes key = 1;
}

message SetOperation {
    message Condition {
        oneof value {
            bool exists = 1;
            Value equals = 2;
        }
    }

    bytes key = 1;
    Value value = 2;
    Condition condition = 3;
}

message SetAddOperation {
    bytes key = 1;
    repeated Scalar members = 2;
}

message SetRemoveOperation {
    bytes key = 1;
    repeated Scalar members = 2;
}

message MapSetOperation {
    bytes key = 1;
    Scalar field = 2;
    Value value = 3;
    Scalar order = 4;
}

message MapDeleteOperation {
    bytes key = 1;
    Scalar field = 2;
}

message Bound {
    oneof value {
        Scalar included = 1;
        Scalar excluded = 2;
    }
}

message GetMapRangeOperation {
    bytes key = 1;
    Bound start = 2;
    Bound end = 3;
    bool reverse = 4;
    uint32 limit = 5;
}

message GetMapRangeByFieldOperation {
    bytes key = 1;
    Bound start = 2;
    Bound end = 3;
    bool reverse = 4;
    uint32 limit = 5;
}

message Response {
    oneof body {
        Error error = 1;
        GetResult get = 2;
        SetResult set = 3;
        DeleteResult delete = 4;
        SetAddResult set_add = 5;
        SetRemoveResult set_remove = 6;
        MapSetResult map_set = 7;
        MapDeleteResult map_delete = 8;
        GetMapRangeResult get_map_range = 9;
        GetMapRangeByFieldResult get_map_range_by_field = 10;
    }
}

message Error {
    enum Code {
        INTERNAL = 0;
    }

    Code code = 1;
}

message GetResult {
    Value value = 1;
}

message DeleteResult {
    bool did_delete = 1;
}

message SetResult {
    bool did_set = 1;
}

message SetAddResult {}

message SetRemoveResult {}

message MapSetResult {}

message MapDeleteResult {
    bool did_delete = 1;
}

message GetMapRangeResult {
    repeated Value values = 1;
}

message GetMapRangeByFieldResult {
    repeated Value values = 1;
}
